examples/components/error/error-message-checkbox.njk
{% from "components/checkboxes/checkboxes.njk" import checkboxes as checkboxes %}

{{
    checkboxes({
        "id": "example-nationalitet",
        "checkboxLegend": "Hvad er din nationalitet?",
        "groupname": "nationalitet[]",
        "errorMessage": "Angiv om du er dansk, svensk eller anden nationalitet",
        "items": [
            {
                "value": "dansk",
                "label": "Dansk"
            },
            {
                "value": "svensk",
                "label": "Svensk"
            },
            {
                "value": "anden",
                "label": "Anden nationalitet"
            }
        ]
    })
}}